// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputValidator when a custom error slot is provided should render as expected 1`] = `
<div class="input"><label class="input__label sr-only">
    My Label
  </label> <input id="my-input">
  <!---->
  <div id="custom-error-message-slot"><span id="custom-error-message">Uh oh! Please provide valid input.</span></div>
</div>
`;

exports[`InputValidator when a hint slot is provided should render as expected 1`] = `
<div class="input"><label class="input__label sr-only">
    My Label
  </label> <input id="my-input">
  <div id="custom-hints-slot"><span id="custom-hint">This is a hint.</span></div>
  <!---->
</div>
`;

exports[`InputValidator when a hint slot is provided, but there is a validation error should render as expected 1`] = `
<div class="input"><label class="input__label sr-only">
    My Label
  </label> <input id="my-input">
  <!---->
  <div class="input__errors"><span class="input__error text-error-400">
        My Label is required.
      </span></div>
</div>
`;

exports[`InputValidator when a hint string is provided should render as expected 1`] = `
<div class="input">
  <!---->
  <div class="input__hint-container"><span class="input__hint text-black-500">This is a hint.</span></div>
  <!---->
</div>
`;

exports[`InputValidator when a hint string is provided, but there is a validation error should render as expected 1`] = `
<div class="input"><label class="input__label sr-only">
    My Label
  </label> <input id="my-input">
  <!---->
  <div class="input__errors"><span class="input__error text-error-400">
        My Label is required.
      </span></div>
</div>
`;

exports[`InputValidator when a validator name is not provided should render as expected 1`] = `
<div class="input"><label class="input__label sr-only">
    My Input Field
  </label> <input id="my-input">
  <!---->
  <div class="input__errors"><span class="input__error text-error-400">
        My Input Field is required.
      </span></div>
</div>
`;

exports[`InputValidator when a validator name is provided should render as expected 1`] = `
<div class="input">
  <!----> <input id="my-input">
  <!---->
  <div class="input__errors"><span class="input__error text-error-400">
        Some Custom Message is required.
      </span></div>
</div>
`;

exports[`InputValidator when no label string is provided to the input validator should render as expected 1`] = `
<div class="input">
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`InputValidator when passing a label string to the input validator should render as expected 1`] = `
<div class="input"><label class="input__label sr-only">
    myLabel
  </label>
  <!---->
  <!---->
</div>
`;

exports[`InputValidator when there are no validation errors should render as expected 1`] = `
<div class="input"><label class="input__label sr-only">
    My Label
  </label> <input>
  <!---->
  <!---->
</div>
`;

exports[`InputValidator when there are validation errors and the input validator should bail should render as expected 1`] = `
<div class="input"><label class="input__label sr-only">
    My Label
  </label> <input id="my-input">
  <!---->
  <div class="input__errors"><span class="input__error text-error-400">
        My Label is required.
      </span></div>
</div>
`;

exports[`InputValidator when there are validation errors and the input validator should not bail after the first error should render as expected 1`] = `
<div class="input"><label class="input__label sr-only">
    My Label
  </label> <input id="my-input">
  <!---->
  <div class="input__errors"><span class="input__error text-error-400">
        My Label is required.
      </span><span class="input__error text-error-400">
        My Label cannot be less than 3 characters.
      </span></div>
</div>
`;

exports[`InputValidator when there are validation errors, but the show errors property is false should render as expected 1`] = `
<div class="input"><label class="input__label sr-only">
    My Label
  </label> <input id="my-input">
  <!---->
  <!---->
</div>
`;
